@@ -7,6 +7,8 @@ lintian-brush (0.2) UNRELEASED; urgency=medium
   * Fix running of specific fixers.
   * Add missing dependency on python3-dulwich. Closes: #912219
   * Obey git global and per-tree committer settings.
+  * Rather than stripping comments, refuse to edit control files with
+    comments.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 28 Oct 2018 15:44:06 +0000
 
